--- a/src/assets/head/manifest.json
+++ b/src/assets/head/manifest.json
@@ -1,5 +1,16 @@
 {
-  "short_name": "portfolio",
-  "name": "portfolio",
-  "start_url": "index.html"
+  "short_name": "Juan Di Nella",
+  "name": "Juan Di Nella's portfolio",
+  "start_url": "/",
+  "display": "standalone",
+  "background_color": "#FFFFFF",
+  "theme_color": "#000000",
+  "description": "Juan Di Nella's portfolio",
+  "icons": [
+    {
+      "src": "/assets/head/favicon.png",
+      "type": "image/png",
+      "sizes": "500x500"
+    }
+  ]
 }
