--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "gulp-zip": "^4.1.0",
     "uglifyjs-webpack-plugin": "^1.2.4",
     "webpack": "^4.5.0",
+    "workbox-webpack-plugin": "^3.1.0",
     "yargs": "^11.0.0"
   },
   "devDependencies": {
