--- a/src/assets/head/manifest.json
+++ b/src/assets/head/manifest.json
@@ -1,5 +1,5 @@
 {
-  "short_name": "JD Portfolio",
+  "short_name": "Portfolio",
   "name": "Juan Di Nella's portfolio",
   "start_url": "/",
   "display": "standalone",
