--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@pixel2html/eslint-config": "^1.5.0",
     "@pixel2html/pipes": "^2.1.1",
     "babel-loader": "8.0.0-beta.2",
+    "cheerio": "^1.0.0-rc.2",
     "critical": "^1.2.2",
     "del": "^3.0.0",
     "eslint": "^4.19.1",
@@ -30,6 +31,8 @@
     "fs-path": "^0.0.24",
     "gulp": "^4.0.0",
     "gulp-zip": "^4.1.0",
+    "lazysizes": "^4.0.2",
+    "lqip-pug": "^1.0.2",
     "uglifyjs-webpack-plugin": "^1.2.4",
     "webpack": "^4.5.0",
     "workbox-webpack-plugin": "^3.1.0",
