--- a/package.json
+++ b/package.json
@@ -16,14 +16,14 @@
     "debug": "gulp scripts --debug"
   },
   "dependencies": {
-    "@babel/core": "^7.0.0-beta.44",
+    "@babel/core": "^7.4.5",
     "@babel/runtime": "^7.0.0-beta.44",
-    "@pixel2html/babel-preset": "^1.0.0",
-    "@pixel2html/eslint-config": "^1.5.0",
-    "@pixel2html/pipes": "^2.1.1",
+    "@pixel2html/babel-preset": "^1.7.1",
+    "@pixel2html/eslint-config": "^1.7.0",
+    "@pixel2html/pipes": "^2.2.5",
     "babel-loader": "8.0.0-beta.2",
     "cheerio": "^1.0.0-rc.2",
-    "critical": "^1.2.2",
+    "critical": "^1.3.4",
     "del": "^3.0.0",
     "eslint": "^4.19.1",
     "eslint-loader": "^2.0.0",
@@ -40,10 +40,10 @@
   },
   "devDependencies": {
     "@pixel2html/stylelint-config": "^1.5.3",
-    "browser-sync": "^2.23.6",
-    "react-dev-utils": "^5.0.1",
-    "stylelint": "^9.2.0",
-    "webpack-bundle-analyzer": "^2.11.1"
+    "browser-sync": "^2.26.7",
+    "react-dev-utils": "^9.0.1",
+    "stylelint": "^10.1.0",
+    "webpack-bundle-analyzer": "^3.3.2"
   },
   "stylelint": {
     "extends": "@pixel2html/stylelint-config"
