--- a/package.json
+++ b/package.json
@@ -16,22 +16,22 @@
     "debug": "gulp scripts --debug"
   },
   "dependencies": {
-    "@babel/core": "^7.4.5",
-    "@babel/runtime": "^7.0.0-beta.44",
+    "@babel/core": "^7.12.10",
+    "@babel/runtime": "^7.12.5",
     "@pixel2html/babel-preset": "^1.7.1",
     "@pixel2html/eslint-config": "^1.7.0",
     "@pixel2html/pipes": "^2.2.5",
-    "babel-loader": "8.0.0-beta.2",
-    "cheerio": "^1.0.0-rc.2",
-    "critical": "^1.3.4",
-    "del": "^3.0.0",
-    "eslint": "^4.19.1",
+    "babel-loader": "^8.2.2",
+    "cheerio": "^1.0.0-rc.5",
+    "critical": "^2.0.6",
+    "del": "^6.0.0",
+    "eslint": "^7.8.1",
     "eslint-loader": "^2.0.0",
     "fontfaceobserver": "^2.0.13",
     "fs-path": "^0.0.24",
     "gulp": "^4.0.0",
     "gulp-zip": "^4.1.0",
-    "lazysizes": "^4.0.2",
+    "lazysizes": "^5.3.0",
     "lqip-pug": "^1.0.2",
     "uglifyjs-webpack-plugin": "^1.2.4",
     "webpack": "^4.5.0",
