--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@pixel2html/eslint-config": "^1.7.0",
     "@pixel2html/pipes": "^2.2.5",
     "babel-loader": "^8.2.2",
+    "browser": "^0.2.6",
     "cheerio": "^1.0.0-rc.5",
     "critical": "^2.0.6",
     "del": "^6.0.0",
@@ -36,13 +37,13 @@
     "uglifyjs-webpack-plugin": "^1.2.4",
     "webpack": "^4.5.0",
     "workbox-webpack-plugin": "^2.1.2",
-    "yargs": "^11.0.0"
+    "yargs": "^16.2.0"
   },
   "devDependencies": {
     "@pixel2html/stylelint-config": "^1.5.3",
     "browser-sync": "^2.26.7",
     "react-dev-utils": "^9.0.1",
-    "stylelint": "^10.1.0",
+    "stylelint": "^13.8.0",
     "webpack-bundle-analyzer": "^3.3.2"
   },
   "stylelint": {
